# hello-world

./: README.md  load-grpc.js  load-rest.js
.github/workflows/: axum-hello-rest.yaml  gin-hello-rest.yaml  spring-hello-rest.yaml  tonic-rust-grpc.yaml
axum-hello-rest/: Cargo.toml  Dockerfile
axum-hello-rest/src/: main.rs
express-hello-rest/: index.mjs  package-lock.json  package.json
flask-hello-rest/: Dockerfile  README.md  app.py  nginx.conf
gin-hello-rest/: Dockerfile  go.mod  main.go
quarkus-hello-rest/: build.gradle
quarkus-hello-rest/src/main/java/net/windwards/rest/: GreetingResource.java
quarkus-hello-rest/src/main/resources/: application.properties
spring-hello-rest/: Dockerfile  build.gradle
spring-hello-rest/src/main/java/net/windwards/spring/hello_rest/: HelloRestApplication.java
spring-hello-rest/src/main/java/net/windwards/spring/hello_rest/rest/: HomeResource.java
tonic-hello-grpc/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  greetings.proto
tonic-hello-grpc/src/: main.rs
